unpackaged/objects/wb_Membership__c.object
<CustomObject>
    <description>WellBe MD Member Contract Header</description>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <label>申込日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支払会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>会員契約（支払い）</relationshipLabel>
        <relationshipName>BillingMembershipContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingCountryNo__c</fullName>
        <label>請求先国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingDate__c</fullName>
        <label>請求書発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingDept__c</fullName>
        <label>請求先部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingDistrict__c</fullName>
        <label>請求地区</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingExtNo__c</fullName>
        <label>請求先内線</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFax__c</fullName>
        <label>請求先FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingName__c</fullName>
        <label>請求先氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingNote__c</fullName>
        <label>請求備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingTel__c</fullName>
        <label>請求先TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingTitle__c</fullName>
        <label>請求先役職</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>会社</fullName>
                </value>
                <value>
                    <fullName>個人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>会員契約 (契約会社)</relationshipLabel>
        <relationshipName>CompanyContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractCountry__c</fullName>
        <label>契約国</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>契約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractDistrict__c</fullName>
        <label>契約地区</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractExpiryDate__c</fullName>
        <label>契約満期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractIndividual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約個人</label>
        <referenceTo>wb_Individual__c</referenceTo>
        <relationshipLabel>会員契約</relationshipLabel>
        <relationshipName>IndividualContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>通貨</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountApplicableDate__c</fullName>
        <label>割引適用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscountNote__c</fullName>
        <label>割引備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <label>割引率</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <label>適用割引率種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>グループ</fullName>
                </value>
                <value>
                    <fullName>団体</fullName>
                </value>
                <value>
                    <fullName>優良</fullName>
                </value>
                <value>
                    <fullName>グループ・団体</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupDiscountPer__c</fullName>
        <formula>IF(CASE(DiscountType__c, 
&quot;グループ&quot;, 1, 
&quot;団体&quot;,1, 0) = 0,0, ContractCompany__r.GroupName__r.GroupWaribikiPer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>新・割引率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InternalAffairs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>内務担当</label>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>会員契約 (内務担当)</relationshipLabel>
        <relationshipName>MDMemebrContractPIC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員契約</label>
        <referenceTo>wb_Membership__c</referenceTo>
        <relationshipLabel>会員契約</relationshipLabel>
        <relationshipName>PreviousContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>会員契約</relationshipLabel>
        <relationshipName>ResponsibleMenbershipContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未確定</fullName>
                </value>
                <value>
                    <fullName>確定</fullName>
                </value>
                <value>
                    <fullName>キャンセル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>会員契約</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContractCompany__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>契約番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>